--- a/views/veiculosSuperLuxo.ejs
+++ b/views/veiculosSuperLuxo.ejs
@@ -1,52 +1,79 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
-    <title>Veículos Básicos</title>
-  </head>
-  <body>
-    <header class="title-header">
-      <h1 class="title"><a href="/paginaPrincipal">RENT A CAR</a></h1>
-      <p class="title">/</p>
-      <p class="title-red">SUPER LUXO</p>
-    </header>
-    <main>
-      <section class="car-group-oferta">
-        <div class="car-card">
-          <img
-            class="card-image"
-            src="https://imgd-ct.aeplcdn.com/1056x660/n/cw/ec/130677/huracan-tecnica-right-front-three-quarter.jpeg?isig=0&q=80"
-          />
-          <h2 class="card-title">LAMBORGUINI HURACAN</h2>
-          <p class="card-desc">5.2 V10 GASOLINA LP 640 STO LDF</p>
-          <p class="card-price">R$ 5.440,00 / DIA</p>
-          <div class="card-button-oferta">
-            <button class="btn-ver-oferta">
-              <a class="button-link-oferta" target="_blank" href="#"
-                >VER OFERTA</a
-              >
-            </button>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="main.css" />
+  <title>Veículos Básicos</title>
+</head>
+
+<body>
+  <header class="title-header">
+    <h1 class="title"><a href="/paginaPrincipal">RENT A CAR</a></h1>
+    <p class="title">/</p>
+    <p class="title-red">SUPER LUXO</p>
+  </header>
+  <main>
+    <section class="car-group-oferta">
+      <div class="car-card">
+        <img class="card-image" id="huracanImage" src="" />
+        <h2 class="card-title" id="huracanTitle"></h2>
+        <p class="card-desc" id="huracanDesc"></p>
+        <p class="card-price" id="huracanPrice"></p>
+        <div class="card-button-oferta">
+          <button class="btn-ver-oferta">
+            <a class="button-link-oferta" target="_blank" href="#">VER OFERTA</a>
+          </button>
         </div>
-        <div class="car-card">
-          <img
-            class="card-image"
-            src="https://image.webmotors.com.br/_fotos/anuncionovos/gigante/2024/202412/20241203/ferrari-sf90-3.9-v8-turbo-phev-stradale-f1dct-wmimagem1025182286.jpg?s=fill&w=249&h=186&q=70"
-          />
-          <h2 class="card-title">TOYOTA COROLLA</h2>
-          <p class="card-desc">1.8 VVT-I HYBRID FLEX ALTIS CVT</p>
-          <p class="card-price">R$ 5.600,00 / DIA</p>
-          <div class="card-button-oferta">
-            <button class="btn-ver-oferta">
-              <a class="button-link-oferta" target="_blank" href="#"
-                >VER OFERTA</a
-              >
-            </button>
-          </div>
+      </div>
+      <div class="car-card">
+        <img class="card-image" id="ferrariImage" src="" />
+        <h2 class="card-title" id="ferrariTitle"></h2>
+        <p class="card-desc" id="ferrariDesc"></p>
+        <p class="card-price" id="ferrariPrice"></p>
+        <div class="card-button-oferta">
+          <button class="btn-ver-oferta">
+            <a class="button-link-oferta" target="_blank" href="#">VER OFERTA</a>
+          </button>
         </div>
-      </section>
-    </main>
-  </body>
+      </div>
+    </section>
+  </main>
+  <script>
+    const URL = "http://192.168.56.1:4000/carros";
+
+    async function chamarApi() {
+      const resp = await fetch(URL);
+      const obj = await resp.json();
+      try {
+        let huracan = obj[6];
+        let huracanImage = document.getElementById("huracanImage");
+        let huracanTitle = document.getElementById("huracanTitle");
+        let huracanDesc = document.getElementById("huracanDesc");
+        let huracanPrice = document.getElementById("huracanPrice");
+        huracanImage.src = huracan.imagem;
+        huracanTitle.innerHTML = huracan.marca + " " + huracan.modelo;
+        huracanDesc.innerHTML = huracan.descricao;
+        huracanPrice.innerHTML = huracan.precoDia + " / DIA";
+
+        let ferrari = obj[7];
+        let ferrariImage = document.getElementById("ferrariImage");
+        let ferrariTitle = document.getElementById("ferrariTitle");
+        let ferrariDesc = document.getElementById("ferrariDesc");
+        let ferrariPrice = document.getElementById("ferrariPrice");
+
+        ferrariImage.src = ferrari.imagem;
+        ferrariTitle.innerHTML = ferrari.marca + " " + ferrari.modelo;
+        ferrariDesc.innerHTML = ferrari.descricao;
+        ferrariPrice.innerHTML = ferrari.precoDia + " / DIA";
+
+      } catch (error) {
+        alert("errorrrr");
+      }
+    }
+    chamarApi();
+  </script>
+</body>
+
 </html>
